fix: skip burningwave initialization in jdk26